--- a/Schema.Rmd
+++ b/Schema.Rmd
@@ -25,110 +25,102 @@ connect <- dbConnect(RSQLite::SQLite(), "database.db")
 ## Create CUSTOMER Table #Already run
 
 ```{sql connection=connect}
-CREATE TABLE 'CUSTOMERS' (
-  'customer_id' INT PRIMARY KEY, 
-  'first_name' VARCHAR(250) NOT NULL,
-  'last_name' VARCHAR(250) NOT NULL,
-  'email' VARCHAR(250) NOT NULL,
-  'mobile_no' INT NOT NULL,
-  'street' VARCHAR (50) NOT NULL,
-  'city' TEXT NOT NULL,
-  'state' TEXT NOT NULL,
-  'country' TEXT NOT NULL,
-  'postcode' VARCHAR (50) NOT NULL
-) ;  
-
+CREATE TABLE CUSTOMERS (
+  customer_id INT PRIMARY KEY, 
+  first_name VARCHAR(250) NOT NULL,
+  last_name VARCHAR(250) NOT NULL,
+  email VARCHAR(250) NOT NULL,
+  mobile_no VARCHAR(15) NOT NULL,
+  street VARCHAR(50) NOT NULL,
+  city VARCHAR(100) NOT NULL,
+  state VARCHAR(100) NOT NULL,
+  country VARCHAR(100) NOT NULL,
+  postcode VARCHAR(20) NOT NULL
+);
 ```
 
 ## Create PRODUCT table
 
 ```{sql connection=connect}
-CREATE TABLE 'PRODUCT' (
-  'product_id' INT PRIMARY KEY, 
-  'product_name' VARCHAR(250) NOT NULL,
-  'product_description' VARCHAR(250),
-  'unit_price' VARCHAR(250) NOT NULL,
-  'stock_on_hand' INT NOT NULL,
-  'main_product_id' INT,
-  'category_id' INT NOT NULL,
-  'supplier_id' INT NOT NULL,
+CREATE TABLE PRODUCT (
+  product_id INT PRIMARY KEY, 
+  product_name VARCHAR(250) NOT NULL,
+  product_description VARCHAR(250),
+  unit_price DECIMAL(10,2) NOT NULL,
+  stock_on_hand INT NOT NULL,
+  main_product_id INT,
+  category_id INT NOT NULL,
+  supplier_id INT NOT NULL,
   FOREIGN KEY (supplier_id)
     REFERENCES SUPPLIER (supplier_id),
   FOREIGN KEY (category_id)
     REFERENCES CATEGORY (category_id)
-) ;  
-
+);
 ```
 
 ##Create ORDER table for CUSTOMER-PRODUCT relationship
 
 ```{sql connection=connect}
-CREATE TABLE 'ORDER' (
-  'order_id' INT PRIMARY KEY,
-  'customer_id' INT, 
-  'product_id' INT,
-  'order_date' DATE NOT NULL,
-  'order_status' TEXT NOT NULL, 
-  'order_quantity' INT NOT NULL,
-  'promo_code' VARCHAR(10),
-  'discount_percent' NUMERIC DEFAULT 0,
-  'payment_detail' TEXT NOT NULL,
-  'delivery_fee' NUMERIC DEFAULT 0,
+CREATE TABLE `ORDER` (
+  order_id INT PRIMARY KEY,
+  customer_id INT, 
+  product_id INT,
+  order_date DATE NOT NULL,
+  order_status VARCHAR(50) NOT NULL, 
+  order_quantity INT NOT NULL,
+  promo_code VARCHAR(10),
+  discount_percent DECIMAL(5,2) DEFAULT 0,
+  payment_detail TEXT NOT NULL,
+  delivery_fee DECIMAL(10,2) DEFAULT 0,
   FOREIGN KEY (customer_id)
     REFERENCES CUSTOMER (customer_id),
   FOREIGN KEY (product_id)
     REFERENCES PRODUCT (product_id)
-) ;  
-
+);
 ```
 
 ## Create ADVERTISEMENTS table
 
 ```{sql connection=connect}
-CREATE TABLE 'ADVERTISEMENTS' (
-  'ad_id' INT PRIMARY KEY, 
-  'ad_number' INT NOT NULL,
-  'ad_price' NUMERIC NOT NULL, 
-  'ad_place' VARCHAR (50) NOT NULL
-) ;
-
+CREATE TABLE ADVERTISEMENTS (
+  ad_id INT PRIMARY KEY, 
+  ad_number INT NOT NULL,
+  ad_price DECIMAL(10, 2) NOT NULL, 
+  ad_place VARCHAR(50) NOT NULL
+);
 ```
 
 ##Create ADVERTISE_IN table for PRODUCT-ADVERTISEMENT relationship
 
 ```{sql connection=connect}
-CREATE TABLE 'ADVERTISE_IN' (
-  'product_id' INT PRIMARY KEY, 
-  'ad_id' INT PRIMARY KEY, 
-  FOREIGN KEY (product_id)
-    REFERENCES PRODUCT (product_id),
-  FOREIGN KEY (ad_id)
-    REFERENCES ADVERTISEMENTS (ad_id)
-) ;
-
+CREATE TABLE ADVERTISE_IN (
+  product_id INT,
+  ad_id INT,
+  PRIMARY KEY (product_id, ad_id),
+  FOREIGN KEY (product_id) REFERENCES PRODUCT (product_id),
+  FOREIGN KEY (ad_id) REFERENCES ADVERTISEMENTS (ad_id)
+);
 ```
 
 ## Create SUPPLIER table
 
 ```{sql connection=connect}
-CREATE TABLE 'SUPPLIER' (
-  'supplier_id' INT PRIMARY KEY, 
-  'first_name' VARCHAR(250) NOT NULL,
-  'last_name' VARCHAR(250) NOT NULL, 
-  'email' VARCHAR(250) NOT NULL,
-  'mobile_no' INT NOT NULL,
-) ;  
-
+CREATE TABLE SUPPLIER (
+  supplier_id INT PRIMARY KEY, 
+  first_name VARCHAR(250) NOT NULL,
+  last_name VARCHAR(250) NOT NULL, 
+  email VARCHAR(250) NOT NULL,
+  mobile_no VARCHAR(20) NOT NULL
+);
 ```
 
 ## Create CATEGORY table
 
 ```{sql connection=connect}
-CREATE TABLE 'CATEGORY' (
-  'category_id' INT PRIMARY KEY, 
-  'category_name' VARCHAR(250) NOT NULL
-) ;
-
+CREATE TABLE CATEGORY (
+  category_id INT PRIMARY KEY, 
+  category_name VARCHAR(250) NOT NULL
+);
 ```
 
 #Import to each Entity \## Loading using `read_csv` and `dbWriteTable()`
