--- a/Schema.Rmd
+++ b/Schema.Rmd
@@ -101,7 +101,7 @@ CREATE TABLE 'ORDER' (
 ```{sql connection=connect}
 CREATE TABLE ADVERTISEMENTS (
   ad_id VARCHAR(250) PRIMARY KEY, 
-  ad_number INT NOT NULL,
+  ad_frequency INT NOT NULL,
   ad_price DECIMAL(10, 2) NOT NULL, 
   ad_place VARCHAR(50) NOT NULL
 );
