--- a/Schema.Rmd
+++ b/Schema.Rmd
@@ -34,6 +34,7 @@ CREATE TABLE CUSTOMERS (
   customer_id VARCHAR(250) PRIMARY KEY, 
   first_name VARCHAR(250) NOT NULL,
   last_name VARCHAR(250) NOT NULL,
+  gender VARCHAR(10),
   email VARCHAR(250) NOT NULL,
   mobile_no VARCHAR(15) NOT NULL,
   street VARCHAR(50) NOT NULL,
