--- a/Schema.Rmd
+++ b/Schema.Rmd
@@ -36,11 +36,7 @@ CREATE TABLE CUSTOMERS (
   last_name VARCHAR(250) NOT NULL,
   gender VARCHAR(10),
   email VARCHAR(250) NOT NULL,
-  mobile_no VARCHAR(15) NOT NULL,
-  street VARCHAR(50) NOT NULL,
-  city VARCHAR(100) NOT NULL,
-  country VARCHAR(100) NOT NULL,
-  postcode VARCHAR(20) NOT NULL
+  mobile_no VARCHAR(15) NOT NULL
 );
 ```
 
