--- a/Schema.Rmd
+++ b/Schema.Rmd
@@ -18,7 +18,7 @@ library(RSQLite)
 
 ##Adjustment 14/3/2024: delete state (focus only address in the UK), Change datatype of all primary key to varchar, create DISCOUNT table to be in  compliance with 3NF
 ##Adjustment 15/3/2024: delete SUPPLIER first_name and last_name, and change to supplier_name
-
+## added category fee, product review, rename attributes
 
 ##Connect to database
 
@@ -30,13 +30,13 @@ connect <- dbConnect(RSQLite::SQLite(), "database.db")
 
         
 ```{sql connection=connect}
-CREATE TABLE CUSTOMERS (
+CREATE TABLE CUSTOMER (
   customer_id VARCHAR(250) PRIMARY KEY, 
   first_name VARCHAR(250) NOT NULL,
   last_name VARCHAR(250) NOT NULL,
   gender VARCHAR(10),
-  email VARCHAR(250) NOT NULL,
-  mobile_no VARCHAR(15) NOT NULL
+  customer_email VARCHAR(250) NOT NULL,
+  customer_mobile VARCHAR(15) NOT NULL
 );
 ```
 
@@ -62,6 +62,7 @@ CREATE TABLE PRODUCT (
   product_id VARCHAR(250) PRIMARY KEY, 
   product_name VARCHAR(250) NOT NULL,
   product_description VARCHAR(250),
+  product_rating DECIMAL(5,2),
   unit_price DECIMAL(10,2) NOT NULL,
   stock_on_hand INT NOT NULL,
   main_product_id INT,
@@ -97,7 +98,7 @@ CREATE TABLE 'ORDER' (
   order_status VARCHAR(50) NOT NULL, 
   order_quantity INT NOT NULL,
   promo_code VARCHAR(20),
-  payment_detail TEXT NOT NULL,
+  payment_method TEXT NOT NULL,
   delivery_fee DECIMAL(10,2) DEFAULT 0,
   FOREIGN KEY (customer_id)
     REFERENCES CUSTOMER (customer_id),
@@ -108,10 +109,10 @@ CREATE TABLE 'ORDER' (
 );
 ```
 
-## Create ADVERTISEMENTS table
+## Create ADVERTISEMENT table
 
 ```{sql connection=connect}
-CREATE TABLE ADVERTISEMENTS (
+CREATE TABLE ADVERTISEMENT (
   ad_id VARCHAR(250) PRIMARY KEY, 
   ad_frequency INT NOT NULL,
   ad_price DECIMAL(10, 2) NOT NULL, 
@@ -137,8 +138,8 @@ CREATE TABLE ADVERTISE_IN (
 CREATE TABLE SUPPLIER (
   supplier_id VARCHAR(250) PRIMARY KEY, 
   supplier_name VARCHAR(250) NOT NULL,
-  email VARCHAR(250) NOT NULL,
-  mobile_no VARCHAR(20) NOT NULL
+  supplier_email VARCHAR(250) NOT NULL,
+  supplier_mobile VARCHAR(20) NOT NULL
 );
 ```
 
